tests/consteval_string_index_oob_bad.sl
// Verifies const-eval string index out-of-bounds is rejected.
fn require_third(const s &str) {
	const {
		assert s[3] == 0
	}
}

fn main() {
	require_third("abc")
}
